--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1><a href="index.html">자료구조론</a></h1>
     <ol>
-        <li><a href="dataStructure.html">DATA STRUCTURE</a></li>
-        <li><a href="sort.html">SORT ALGORITHM</a></li>
+        <li><a href="dataStructure/dataStructure.html">DATA STRUCTURE</a></li>
+        <li><a href="sort/sort.html">SORT ALGORITHM</a></li>
     </ol>
   </body>
 </html>
