--- a/dataStructure/graph.html
+++ b/dataStructure/graph.html
@@ -12,6 +12,20 @@
     </ol><br>
     <h2>그래프</h2>
     <p>
+      그래프는 정점인 vertex와 각 정점을 연결하는 edge로 구성된 자료구조이다.<br>
+      방향성을 갖는 edge로 이루어진 방향그래프와 방향성을 갖지 않는 무방향 그래프로 나눌 수 있다.<br>
+      자료구조의 형태와 구성이 상대적으로 자유롭다는 특성 덕분에 희소행렬등을 나타내는 데에 쓰일 수 있으며 메모리를 상대적으로 적게 차지한다.<br>
+      또한 그래프는 후에 설명할 트리를 구현하는데 이용되기도 한다.<br>
+    </p>
+    <p style="margin-bottom:50px">
+      <img src="graph.png" with="70%"><br>
+      그래프에서 중요하게 여겨지는 연산은 순회에 있다.<br>
+      여타 자료구조들은 형태가 정형적이기 때문에 자료구조 순회에 대해 별로 고민을 하지 않았지만 그래프는 그 자유로운 특성 때문에 순회에 대해 고민해야 한다.<br>
+      탐색은 깊이우선탐색과 너비우선탐색으로 나뉘는데,<br>
+      깊이우선탐색은 출발정점v를 방문한 후 인접하면서 아직 방문하지 않은 정점 w를 방문한다. 그 후 w에 대해 다시 깊이우선탐색을 시작한다.<br>
+      만약 w에 인접한 모든 정점이 방문한 상태라면, v에 대해서 w가 아닌 다른 인접한 정점을 선택하여 깊이우선탐색을 시작한다.<br>
+      너비우선탐색은 출발정점v를 방문한 후 인접하면서 방문하지 않은 모든 정점들을 방문한다.<br>
+      그리고 이렇게 새로 방문한 모든 정점들에 대해서 너비우선탐색을 다시 실행하는 식으로 진행된다.<br>
     </p>
 
     <h3>분류</h3>
