--- a/dataStructure/queue.html
+++ b/dataStructure/queue.html
@@ -20,7 +20,7 @@
       <img src="queue.png" width="60%"><br>
       그림에서처럼 넣는 곳을 rear, 빼는 곳을 front라고 지칭한다.
     </p>
-    <p>
+    <p style="margin-bottom:50px">
       큐의 연산에는,<br>
       .enQueue(): rear에 데이터를 삽입한다.<br>
       .peek(): front에 있는 데이터를 반환한다.<br>
