--- a/dataStructure/stack.html
+++ b/dataStructure/stack.html
@@ -17,11 +17,11 @@
       스택은 처음부터 끝까지의 모든 자료를 한번에 볼 수 있는 자료구조가 아니라, 목록 가장 끝의 자료만 볼 수 있는 제한적 접근이 특징이다.<br>
     </p>
     <p>
-      <img src="stack.png" width="70%"><br>
+      <img src="stack.png" width="55%"><br>
       스택을 이해하기 위해서는 프링글스 통을 생각하면 좋다. 한쪽이 막혀 있기 때문에 다른 한쪽으로만 넣을 수 있고 또 뺄 수 있다.<br>
       따라서 가장 처음 넣은 자료가 가장 마지막에 나오는 특징을 갖는데, 이를 선입후출(FILO)구조라고도 부른다.
     </p>
-    <p>
+    <p style="margin-bottom:50px">
       넣을 수 있는 가장 윗 부분을 top이라 부르는데, 스택의 연산에는<br>
       .top(): top에 있는 데이터를 반환한다.<br>
       .pop(): top에 있는 데이터를 삭제한다.<br>
