--- a/dataStructure/array.html
+++ b/dataStructure/array.html
@@ -15,7 +15,7 @@
       프로그래밍을 조금이라도 접해본 사람이라면 배열이라는 말은 들어본 적이 있을 것이다.<br>
       배열은 번호(인덱스)와 번호에 대응하는 데이터들로 이루어진 자료구조를 나타낸다.<br>
       일반적으로 배열에는 같은 종류의 데이터들이 순차적으로 저장되어, 값의 번호가 곧 배열의 시작점으로부터 값이 저장되어 있는 상대적인 위치가 된다.<br>
-    <p>
+    <p style="margin-bottom:50px">
       <img src="array.jpg" width="70%"><br>
       가장 기초적인 자료구조이며, 다른 어려운 자료구조들을 표현하기 위해서 사용되기도 한다.
     </p>
