--- a/dataStructure/dataStructure.html
+++ b/dataStructure/dataStructure.html
@@ -11,14 +11,13 @@
         <li><a href="../sort/sort.html">SORT ALGORITHM</a></li>
     </ol><br>
     <h2>DATA STRUCTURE</h2>
-    <p style="margin-top:30px;">이번 시간에는 여러 자료구조에 대해서 공부해 볼 겁니다.<br></p>
-    <p>자료구조(data Structure)는 컴퓨터 과학에서 효율적인 접근 및 수정을 가능케 하는 자료의 조직, 관리, 저장을 뜻합니다.<br>
-    더 정확히는 데이타 값의 모임, 데이타 간의 관계, 그리고 데이터에 적용할 수 있는 함수느 명령 등을 의미합니다.<br>
-    따라서 신중히 선택한 자료구조는 보다 효율적인 알고리즘을 사용할 수 있게 합니다.<br></p>
-    <p style="margin-bottom:100px">다양한 프로그램을 설계할 때, 어떠한 자료구조를 선택할지는 가장 우선적으로 고려되어야 합니다.<br>
-    이는 큰 시스템을 제작할 때 구현의 난이도나 최종 결과물의 성능이 자료구조에 크게 의존한다는 것을 많은 경험이 뒷받침하기 때문입니다.<br>
-    일단 자료구조가 선택되면 적용할 알고리즘은 상대적으로 명확해지기 마련입니다.<br>
-    이번 기회가 여러 자료구조에 대해 공부하고 더 효율적인 코딩을 하는 좋은 기회였으면 좋겠습니다.
+    <p style="margin-top:30px;">자료구조(data Structure)는 컴퓨터 과학에서 효율적인 접근 및 수정을 가능케 하는 자료의 조직, 관리, 저장을 뜻한다.<br>
+    더 정확히는 데이타 값의 모임, 데이타 간의 관계, 그리고 데이터에 적용할 수 있는 함수느 명령 등을 의미한다.<br>
+    따라서 신중히 선택한 자료구조는 보다 효율적인 알고리즘을 사용할 수 있게 합한다.<br></p>
+    <p style="margin-bottom:50px">다양한 프로그램을 설계할 때, 어떠한 자료구조를 선택할지는 가장 우선적으로 고려되어야 한다.<br>
+    이는 큰 시스템을 제작할 때 구현의 난이도나 최종 결과물의 성능이 자료구조에 크게 의존한다는 것을 많은 경험이 뒷받침하기 때문이다.<br>
+    일단 자료구조가 선택되면 적용할 알고리즘은 상대적으로 명확해지기 마련이다.<br>
+    이번 기회가 여러 자료구조에 대해 공부하고 더 효율적인 코딩을 하는 좋은 기회였으면 좋겠다.
     </p>
     <h3>분류</h3>
     <ul>
