--- a/sort/sort.html
+++ b/sort/sort.html
@@ -12,6 +12,7 @@
     </ol><br>
     <h2>SORT</h2>
     <p style="margin-top:30px;">이번 시간에는 정렬 알고리즘에 대해서 공부해볼 겁니다.<br>
-    <img src="../coding.jpg" alt="코딩을 하는 사진" width="50%">
+    </p>
+    <h1>!준비중!</h1>
   </body>
 </html>
